<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_12"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_12"
        android:gravity="center_horizontal"
        android:paddingEnd="@dimen/padding_16"
        android:paddingStart="@dimen/padding_16"
        android:text="@string/enter_the_city"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/line_grey"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_36"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_12"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_search"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/padding_16"
            android:paddingStart="@dimen/padding_16"
            android:text="@string/search"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCurrentLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="@dimen/padding_16"
        android:drawableStart="@drawable/ic_map_point"
        android:gravity="center_vertical"
        android:padding="@dimen/margin_12"
        android:text="@string/current_location"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_16"
        />

    <RelativeLayout
        android:id="@+id/rlCurrentAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_12"
        android:visibility="gone"
        tools:visibility="visible">

        <View
            android:id="@+id/view_div"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_6"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_current_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_div"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_6"
            android:text="@string/chosen_city"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvGetCurrentCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_current_city"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/city"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/bt_show"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/tvGetCurrentCity"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_12"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_12"
            android:background="@color/colorPrimary"
            android:paddingEnd="@dimen/margin_6"
            android:paddingStart="@dimen/margin_6"
            android:text="@string/show_weather_for_chosen_city"
            android:textColor="@android:color/white"
           />


    </RelativeLayout>


</LinearLayout>